syntax = "proto3";

package calculatorPackage;

service Calculator {
    rpc calculate(CalculationRequest) returns (SolvedCalculation);
}

message SolvedCalculation {
    int32 result = 1;
}

message CalculationRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
    string operation = 3;
}
